--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@emotion/cache": "^11.10.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "i18next": "^21.9.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^11.18.3"
+    "react-i18next": "^11.18.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.11.6",
@@ -26,11 +35,8 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
