--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "i18next": "^21.9.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^11.18.3"
+    "react-i18next": "^11.18.3",
+    "react-icons": "^4.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.11.6",
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
