--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "apollo-upload-client": "^17.0.0",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "i18next": "^21.9.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-i18next": "^11.18.3",
     "react-icons": "^4.4.0",
     "yup": "^0.32.11"
