--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-dropzone": "^14.2.2",
     "react-i18next": "^11.18.3",
     "react-icons": "^4.4.0",
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
+    "recoil": "^0.7.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
