--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "ag-grid-community": "^28.1.0",
+    "ag-grid-react": "^28.1.0",
     "apollo-upload-client": "^17.0.0",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
