--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@headlessui/react": "^1.6.6",
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "apollo-upload-client": "^17.0.0",
@@ -34,6 +35,7 @@
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/apollo-upload-client": "^17.0.1",
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
